# getObsAtmo

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
atmanalyticalmodels/: __init__.py  libatmscattering.py
docs/: requirements.txt
getObsAtmo/: README.md  __init__.py  _version.py  getObsAtmo.py  randomseed  rebuildGrids.py  rebuildGrids_specialsmallairmasses.py
obsatmo_data/: CTIO_atmospherictransparencygrid_OZabs.npy  CTIO_atmospherictransparencygrid_params.json  CTIO_atmospherictransparencygrid_params.pickle  LSST_atmospherictransparencygrid_O2abs.npy  LSST_atmospherictransparencygrid_OZabs.npy  LSST_atmospherictransparencygrid_params.pickle  LSST_atmospherictransparencygrid_rayleigh.npy  OHP_atmospherictransparencygrid_OZabs.npy  OHP_atmospherictransparencygrid_params.json  OHP_atmospherictransparencygrid_params.pickle  OHP_atmospherictransparencygrid_rayleigh.npy  OHP_ohp_autumn_atmospherictransparencygrid_O2abs.npy  OHP_ohp_autumn_atmospherictransparencygrid_rayleigh.npy  OHP_ohp_spring_atmospherictransparencygrid_O2abs.npy  OHP_ohp_spring_atmospherictransparencygrid_rayleigh.npy  OHP_ohp_summer_atmospherictransparencygrid_O2abs.npy  OHP_ohp_summer_atmospherictransparencygrid_rayleigh.npy  OHP_ohp_winter_atmospherictransparencygrid_O2abs.npy  OHP_ohp_winter_atmospherictransparencygrid_OZabs.npy  OHP_ohp_winter_atmospherictransparencygrid_params.pickle  OHP_ohp_winter_atmospherictransparencygrid_rayleigh.npy  OMK_atmospherictransparencygrid_OZabs.npy  OMK_atmospherictransparencygrid_params.pickle  OMK_atmospherictransparencygrid_rayleigh.npy  OSL_atmospherictransparencygrid_O2abs.npy  OSL_atmospherictransparencygrid_OZabs.npy  OSL_atmospherictransparencygrid_params.json  OSL_atmospherictransparencygrid_params.pickle  (+8 more)
old/: tox_old.ini
(+76 files in other folders)
