[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "getObsAtmo"
dynamic = ["version"]
description = "Package for atmospheric transparency grids"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "S. Dagoret-Campagne", email = "sylvie.dagoret-campagne@ijclab.in2p3.fr" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "matplotlib",
    "seaborn",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

dev = ["tox",
"pre-commit",
"codecov"]

doc = [
    "sphinx>=7.0",
    "sphinx-rtd-theme",
    "sphinx-tabs",
    "numpydoc",
    "myst-nb",
    "nbsphinx",
    "pydot",
    "graphviz",
]

[project.urls]
Homepage = "https://github.com/LSSTDESC/getObsAtmo"
Documentation = "https://lsstdesc.github.io/getObsAtmo/"
Repository = "https://github.com/LSSTDESC/getObsAtmo.git"

[tool.setuptools]
package-dir = { "" = "." }
packages = ["getObsAtmo"]


[tool.setuptools.package-data]
getObsAtmo = ["obsatmo_data/*.npy", "obsatmo_data/*.pickle", "obsatmo_data/*.json"]

[tool.setuptools.dynamic]
version = { attr = "getObsAtmo._version.__version__" }
